--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hola soy argenis</h1>
+    <h1>hola soy Argenis J. Bouzas M.</h1>
+    <h2>Soy ingeniero mecatronico</h2>
 </body>
 </html>
